<resources>
    <string name="app_name">Угадай Флаг!</string>

    <string name="menu_start_game">Игра</string>
    <string name="menu_statistic">Статистика</string>
    <string name="menu_exit">Выход</string>
    <string name="menu_setting">Настройки</string>
    <string name="menu_back">Назад</string>

    <string name="menu_country_flag">Флаги стран </string>
    <string name="menu_region_flag">Флаги регионов</string>
    <string name="menu_country_map">Карты стран</string>
    <string name="menu_region_map">Карты регионов</string>
    <string name="statistic_round_title">Результаты раунда</string>
    <string name="statistic_correct_answer">Количество верных ответов</string>
    <string name="statistic_wrong_answer">Количество не правильных ответов</string>
    <string name="statistic_round_points">Набранные очки</string>
    <string name="statistic_all_points">Набранные очки</string>
    <string name="statistic_total_title">Общие результаты</string>
    <string name="menu_in_main_menu">В главное меню</string>
    <string name="menu_again">Играть снова</string>
    <string name="statistic_total_answers">Всего вопросов</string>
    <string name="statistic_percent_correct_answers">Процент верных ответов</string>
    <string name="energy_not_enough_1">Упс! Энергия закончилась!</string>
    <string name="energy_not_enough_2">Что бы восполнитель энергию посмотри видео!</string>
    <string name="menu_watch_ad">Смотреть видео</string>
    <string name="alert_double_tap_exit">Нажми дважды для выходы из игры</string>
    <string name="error_auth">Ошибка авторизации</string>
    <string name="error_btn_try_again">Попробовать снова</string>
    <string name="statistic_total_game">Всего игр</string>
    <string name="settings_volume_music">Громкость музыки</string>
    <string name="settings_volume_sounds">Громкость звуков</string>
    <string name="setting_change_name">Изменить имя</string>
    <string name="setting_hint_input_name">Введи имя\n</string>
    <string name="setting_save_name">Сохранить</string>
    <string name="settings_non_length_name">Имя должно быть не короче 3 букв</string>
    <string name="menu_rating">Рейтинг игроков</string>
    <string name="statistic_rating_top10">Топ 10 игроков</string>
    <string name="menu_rating_player_position">Твоя позиция в рейтинге:</string>
    <string name="menu_rating_wins">Победы</string>
    <string name="menu_rating_games">Игры</string>
    <string name="menu_rating_points">Очки</string>
    <string name="setting_player_name">Твоё имя в рейтинге:</string>
    <string name="error_reward_ad_not_loaded">Упс! Реклама не загружена! Попробуй еще раз!</string>
    <string name="statistic_rating_player_tittle">Твои результаты:</string>
    <string name="greeting_sign_in">Войти</string>
    <string name="setting_hint_input_password">Введи пароль</string>
    <string name="setting_hint_input_email">Введи email</string>
    <string name="greeting_sign_in_without_account">Войти без регистрации</string>
    <string name="greeting_google_sign_in">Войти используя Google Аккаунт</string>
    <string name="error_identify">Авторизация не удалась</string>
    <string name="england">Англия</string>
    <string name="austria_hungary">Австро-Венгрия</string>
    <string name="holy_roman_empire">Свещенная Римская Империя</string>
    <string name="kampuchea">Кампучия</string>
    <string name="kazakh_khanate">Казахское ханство</string>
    <string name="korea">Корея</string>
    <string name="macedonia">Македония</string>
    <string name="macedon_empire">Македонская Империя</string>
    <string name="rhodesia">Родезия</string>
    <string name="ussr">СССР</string>
    <string name="yugoslavia">Югославия</string>
    <string name="zair">Заир</string>
    <string name="menu_history_flag">Исторические флаги</string>
</resources>