<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuContainer"
    style="@style/MenuContainer">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartCountryFlag"
        style="@style/ButtonMenu"
        android:fontFamily="@font/neucha"
        android:text="@string/menu_country_flag" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartRegionFlag"
        style="@style/ButtonMenu"
        android:fontFamily="@font/neucha"
        android:text="@string/menu_region_flag" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartHistoryFlag"
        style="@style/ButtonMenu"
        android:fontFamily="@font/neucha"
        android:text="@string/menu_history_flag" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartCountryMap"
        style="@style/ButtonMenu.NonActive"
        android:enabled="false"
        android:fontFamily="@font/neucha"
        android:text="@string/menu_country_map" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartRegionMap"
        style="@style/ButtonMenu.NonActive"
        android:enabled="false"
        android:fontFamily="@font/neucha"
        android:text="@string/menu_region_map" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        style="@style/ButtonMenu"
        android:fontFamily="@font/neucha"
        android:text="@string/menu_back" />


</LinearLayout>