<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/menuContainer"
        style="@style/MenuContainer">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStartGame"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/ButtonMenu"
            android:text="@string/menu_start_game" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStatistic"
            style="@style/ButtonMenu"
            android:text="@string/menu_statistic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSetting"
            style="@style/ButtonMenu"
            android:text="@string/menu_setting" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnExit"
            style="@style/ButtonMenu"
            android:text="@string/menu_exit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>