<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_background"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/ivMovie"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_movie_ad"
        app:layout_constraintEnd_toStartOf="@id/ivArrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivArrow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/energy"
        app:layout_constraintStart_toEndOf="@id/ivArrow"
        app:layout_constraintTop_toTopOf="parent" />

    <com.lb.auto_fit_textview.AutoResizeTextView
        android:id="@+id/tvTittle"
        style="@style/ButtonTextMenu.Answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/neucha"
        android:text="@string/energy_not_enough_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMovie" />

    <com.lb.auto_fit_textview.AutoResizeTextView
        android:id="@+id/tvTittle2"
        style="@style/ButtonTextMenu.Answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/neucha"
        android:gravity="center"
        android:text="@string/energy_not_enough_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle2">

        <Button
            android:id="@+id/btnWathVideo"
            style="@style/ButtonMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/neucha"
            android:text="@string/menu_watch_ad" />

        <Button
            android:id="@+id/btnInMainMenu"
            style="@style/ButtonMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/neucha"
            android:text="@string/menu_in_main_menu" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>